@@ -1,0 +1,10 @@
+#--------------------------------------------*--------------------------------------------
+# Example: Single Azure Windows VM
+#--------------------------------------------*--------------------------------------------
+
+provider "azurerm" {
+  features {}
+}
+
+# end
+#--------------------------------------------*--------------------------------------------
