@@ -11,5 +11,7 @@
 # Version 1.0.1
 
 - Enhancement the SQL documentation.
+- Enhancement the outputs.
+- Added new SQL example.
 
 
